ingress/pod-details-service-v1.yml
kind: Service
apiVersion: v1
metadata:
  name:  pod-details-v1
spec:
  selector:
  # used to select the pods to route requests
    app: v1
  #note I use clusterIP as I do not want this service
  #published externally
  type:  ClusterIP
  ports:
  - name:  http
    port:  8080
    targetPort:  pod-port
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  pod-details-v1
  labels:
    app: v1
spec:
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
      - image:  architechbootcamp/pod-details:1.0.0
        name:  pod-details
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
          limits:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort:  8000
          name:  pod-port
        #Here we are setting environment variables within the container
        #with values from the current state of the pod that is stored
        #in etcd.  This is the information you recieve when you do 'kubectl describe ...'
