ingress/ingress-rule-single-host.yml
# You can use nip.io dynamic dns service to define your host
# See http://nip.io for details
# change the 

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pod-details-ingress-single
spec:
  rules:
  - http:
      paths:
      - path: /pod-details/v1
        backend:
          serviceName: pod-details-v1
          servicePort: 8000
      - path: /pod-details/v2
        backend:
          serviceName: pod-details-v2
          servicePort: 8000
  #The service that will handle all other
  #paths. e.g. return a 404 not found page.
  backend:
    serviceName: default-http-backend
    servicePort: 80
